# EECS476_final_project

./: README.md  README.md~  test_can_finding.launch
Part_3/object_finder/src/: object_finder_as.cpp
Part_3/pcl_utils/src/: pcl_utils.cpp
Part_4/mobot_pub_des_state/: CMakeLists.txt  CMakeLists.txt~
Part_4/mobot_pub_des_state/src/: pub_des_state.cpp  pub_des_state.h  pub_des_state_main.cpp
Part_4/mobot_pub_des_state/srv/: emptyQueue.srv
Part_4/navigator/: CMakeLists.txt  CMakeLists.txt~  package.xml
Part_4/navigator/src/: navigator.cpp  pub_des_state.h
Part_4/traj_builder/src/: traj_builder.cpp
Part_5/coordinator/src/: coordinator.cpp
Part_5/object_grabber/src/: object_grabber.cpp  object_grabber_as.cpp
baxter_traj_streamer/: package.xml
coordinator/src/: coordinator.cpp
jinx_controller/lin_steering/src/: lin_steering_wrt_odom.cpp  steering_algorithm.h
jinx_controller/point_publisher/: CMakeLists.txt~
jinx_controller/pub_des_state/: CMakeLists.txt~
jinx_controller/traj_builder/: CMakeLists.txt  CMakeLists.txt~
merry_pcd/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml
merry_pcd/src/: find_indices_of_plane_from_patch.cpp  find_plane_coke_can_merry.cpp  pcl_utils.cpp
motion_planning/: .package.xml.swp  CMakeLists.txt
motion_planning/src/: motion_planning_lib.cpp
object_finder/: CMakeList.txt~  CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
object_finder/action/: object_finder.action  object_finder.action~
object_finder/src/: object_finder.cpp  object_finder_as.cpp
object_grabber/src/: object_grabber.cpp
(+13 files in other folders)
